# forward-caffe

./: CMakeLists.txt  README  classification.sh  test.sh
cmake/: Ex.cmake  jaffe_config.h.in
include/: blob.h  common.h  filler.h  layer.h  layer_factory.h  net.h  rawdata.h
include/cmake/: jaffe_config.h
include/layer/: common_layers.h  data_layers.h  loss_layers.h  neuron_layers.h  vision_layers.h
include/layers/: accuracy_layer.h  argmax_layer.h  base_conv_layer.h  batch_norm_layer.h  batch_reindex_layer.h  bias_layer.h  concat_layer.h  conv_layer.h  crop_layer.h  deconv_layer.h  dropout_layer.h  eltwise_layer.h  embed_layer.h  filter_layer.h  flatten_layer.h  im2col_layer.h  inner_product_layer.h  input_layer.h  l2norm_layer.h  loss_layer.h  lrn_layer.h  mvn_layer.h  neuron_layer.h  pooling_layer.h  power_layer.h  prelu_layer.h  relu_layer.h  reshape_layer.h  scale_layer.h  silence_layer.h  slice_layer.h  softmax_layer.h  split_layer.h  spp_layer.h  tile_layer.h
include/proto/: jaffe.pb.h
include/util/: device_alternate.hpp  im2col.h  insert_splits.h  io.h  math_functions.h  math_functions.hpp  rng.h  upgrade_proto.hpp
lib/opencv/: libopencv_calib3d.so.3.0  libopencv_core.so.3.0.0  libopencv_features2d.so.3.0  libopencv_flann.so.3.0.0  libopencv_imgcodecs.so.3.0.0  libopencv_imgproc.so.3.0  libopencv_ml.so.3.0.0  libopencv_objdetect.so.3.0  libopencv_photo.so.3.0  libopencv_shape.so.3.0  libopencv_stitching.so.3.0  libopencv_superres.so.3.0.0  libopencv_video.so.3.0  libopencv_videoio.so.3.0.0  libopencv_videostab.so.3.0
src/: CMakeLists.txt  blob.cpp  common.cpp  layer.cpp  layer_factory.cpp  net.cpp  rawdata.cpp
src/layers/: accuracy_layer.cpp  argmax_layer.cpp  base_conv_layer.cpp  batch_norm_layer.cpp  batch_reindex_layer.cpp  bias_layer.cpp  concat_layer.cpp  concat_layer.cu  conv_layer.cpp  conv_layer.cu  crop_layer.cpp  deconv_layer.cpp  dropout_layer.cpp  dropout_layer.cu  eltwise_layer.cpp  embed_layer.cpp  filter_layer.cpp  flatten_layer.cpp  im2col_layer.cpp  inner_product_layer.cpp  inner_product_layer.cu  input_layer.cpp  l2norm_layer.cpp  l2norm_layer.cu  loss_layer.cpp  lrn_layer.cpp  lrn_layer.cu  mvn_layer.cpp  neuron_layer.cpp  pooling_layer.cpp  pooling_layer.cu  power_layer.cpp  prelu_layer.cpp  prelu_layer.cu  relu_layer.cpp  relu_layer.cu  reshape_layer.cpp  scale_layer.cpp  silence_layer.cpp  silence_layer.cu  (+6 more)
src/proto/: jaffe.pb.cc  jaffe.proto
src/util/: im2col.cpp  im2col.cu  insert_splits.cpp  io.cpp  math_function.cpp  math_functions.cu  upgrade_proto.cpp
test/: CMakeLists.txt  classification.cpp  cuda_test.cu  deconv_test.cpp  extract_bottom_top.cpp  l2norm_gpu_test.cpp  l2norm_test.cpp
(+26 files in other folders)
